IzvorniKod/Frontend/cestafix_front_v0.2/src/ReportList.css
.report-list {
    width: 35%;
    background-color: white;
    padding: 10px;
    box-sizing: border-box;
    overflow-y: auto; /* Enables vertical scrolling */
    max-height: 100vh; /* Limits the height to the viewport */
}

.report-element {
    display: flex;
    justify-content: space-between;
    background-color: lightgray;
    margin-bottom: 10px;
    padding: 10px;
    list-style-type: none;
    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
}

.report-element .content {
    flex-grow: 1;
    word-wrap: break-word; /* Ensures text wraps */
}

.report-element .title {
    font-weight: bold;
    margin-top: 0;
    word-break: break-all; /* Ensures long words don't overflow */
}

.report-element .image-container img {
    max-width: 100px; /* Adjust image size as needed */
    height: auto;
    display: block;
}

.report-element .time-date {
    font-size: 0.8em;
}

ul {
    padding: 0;
    margin: 0;
}

